# ParakeetBot

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  main.yml
parakeet-bot-macros/src/: lib.rs
src/: bot.rs  commands.rs  config.rs  error.rs  log.rs  main.rs  youtube.rs
src/bot/: track_queue.rs  voice.rs  youtube.rs
src/commands/: dc.rs  mod.rs  play.rs  play2.rs  queue.rs  skip.rs  stop.rs
src/data/: mod.rs  queue_metadata.rs
src/lib/: call.rs  events.rs  mod.rs  youtube.rs
src/setup/: config.rs  framework.rs  mod.rs
