[package]
name = "parakeet-bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
dotenv = "0.15"
poise = "0.5"
serde = { version = "1.0", features = ["derive"] }
songbird = { version = "0.3", features = ["yt-dlp", "builtin-queue"] }
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.3", features = ["serde"] }
